--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@mui/x-data-grid": "^6.11.1",
     "axios": "^1.4.0",
     "jotai": "^2.3.1",
     "js-cookie": "^3.0.5",
