--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,10 @@
     "@mui/material": "^5.14.4",
     "@mui/x-data-grid": "^6.11.1",
     "axios": "^1.4.0",
-    "jotai": "^2.3.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "recoil": "^0.7.7"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
